--- a/app/views/blog/post.html.twig
+++ b/app/views/blog/post.html.twig
@@ -69,7 +69,7 @@
               <p>{{ post.content }}</p>
               <hr class="my-5"/>
               <div class="text-center">
-                <a class="btn btn-transparent-dark" href="/../mon-blog/posts">Retour à la Liste des Posts</a>
+                <a class="btn btn-transparent-dark" href="/../mon-blog/posts/{{ 1 }}">Retour à la Liste des Posts</a>
               </div>
             </div>
           </div> 
