review error pages and add new home template for blog

--- a/app/views/admin/admin-profile.html.twig
+++ b/app/views/admin/admin-profile.html.twig
@@ -55,7 +55,7 @@
                     <!-- Profile picture help block-->
                     <div class="small font-italic text-muted mb-4">JPG or PNG no larger than 5 MB</div>
                     <!-- Profile picture upload button-->
-                    <button class="btn btn-primary" type="button">Changer ma Photo de Profile</button>
+                    <button class="btn btn-primary disabled" type="button">Changer ma Photo de Profile</button>
                   </div>
                 </div>
               </div>
@@ -90,7 +90,7 @@
                       </div>
                       
                       <!-- Save changes button-->
-                      <button class="btn btn-primary" type="button">Enrégistrer</button>
+                      <button class="btn btn-primary disabled" type="button">Enrégistrer</button>
                     </form>
                   </div>
                 </div>
