--- a/app/views/blog/home.html.twig
+++ b/app/views/blog/home.html.twig
@@ -2,6 +2,96 @@
 
 {% set page = 'home' %}
 
-{% block header %}{% endblock %}
+{% block header %}
+  <!-- Page Header-->
+  <header class="page-header-ui page-header-ui-light bg-white">
+    <div class="page-header-ui-content pt-5">
+      <div class="container px-5">
+        <div class="row gx-5 align-items-center">
+          <div class="col-lg-6">
+            <h1 class="page-header-ui-title">Build your next project faster with SB UI Kit Pro</h1>
+            <p class="page-header-ui-text mb-5">Welcome to SB UI Kit Pro, a toolkit for building beautiful web interfaces, created by the development team at Start Bootstrap.</p>
+            <div class="d-flex flex-column flex-sm-row">
+              <a class="btn btn-lg btn-primary fw-500 me-sm-3 mb-3 mb-sm-0" href="#explore">
+                Explore Pages
+                <i class="ms-2" data-feather="arrow-right"></i>
+              </a>
+              <a class="btn btn-lg btn-primary-soft text-primary fw-500" href="https://docs.startbootstrap.com/sb-ui-kit-pro/quickstart" target="_blank">Documentation</a>
+            </div>
+          </div>
+          <div class="col-lg-6 d-none d-lg-block" data-aos-delay="100"><img class="img-fluid" src="/../mon-blog/public/assets/img/illustrations/programming.svg" alt="..."/></div>
+        </div>
+      </div>
+    </div>
+    <div class="svg-border-rounded text-light">
+      <!-- Rounded SVG Border-->
+      <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 144.54 17.34" preserveaspectratio="none" fill="currentColor">
+        <path d="M144.54,17.34H0V0H144.54ZM0,0S32.36,17.34,72.27,17.34,144.54,0,144.54,0"></path>
+      </svg>
+    </div>
+  </header>
+{% endblock %}
 
-{% block section %}{% endblock %}
+{% block section %}
+  <div class="container px-5">
+    <div class="row gx-5 justify-content-center">
+      <div class="col-lg-8">
+        <div class="text-center mb-10">
+          <div class="badge rounded-pill bg-primary-soft text-primary badge-marketing mb-3">12 Demos!</div>
+          <h2>Landing Pages</h2>
+          <p class="lead">After purchasing SB UI Kit Pro, you will gain access to these professionally coded, pre-built landing page templates!</p>
+        </div>
+      </div>
+    </div>
+    <div class="row gx-5 text-center">
+      <div class="col-lg-4 mb-5">
+        <h6 class="mb-3">Demo 1 - Multipurpose</h6>
+        <a class="d-block rounded-3 lift lift-lg" href="landing-multipurpose.html"><img class="img-fluid rounded-3" src="https://assets.startbootstrap.com/img/screenshots-product-pages/sb-ui-kit-pro/landing-multipurpose.png"/></a>
+      </div>
+      <div class="col-lg-4 mb-5">
+        <h6 class="mb-3">Demo 2 - Mobile App</h6>
+        <a class="d-block rounded-3 lift lift-lg" href="landing-app-mobile.html"><img class="img-fluid rounded-3" src="https://assets.startbootstrap.com/img/screenshots-product-pages/sb-ui-kit-pro/landing-app-mobile.png"/></a>
+      </div>
+      <div class="col-lg-4 mb-5">
+        <h6 class="mb-3">Demo 3 - Desktop App</h6>
+        <a class="d-block rounded-3 lift lift-lg" href="landing-app-desktop.html"><img class="img-fluid rounded-3" src="https://assets.startbootstrap.com/img/screenshots-product-pages/sb-ui-kit-pro/landing-app-desktop.png"/></a>
+      </div>
+      <div class="col-lg-4 mb-5">
+        <h6 class="mb-3">Demo 4 - Agency</h6>
+        <a class="d-block rounded-3 lift lift-lg" href="landing-agency.html"><img class="img-fluid rounded-3" src="https://assets.startbootstrap.com/img/screenshots-product-pages/sb-ui-kit-pro/landing-agency.png"/></a>
+      </div>
+      <div class="col-lg-4 mb-5">
+        <h6 class="mb-3">Demo 5 - Lead Capture</h6>
+        <a class="d-block rounded-3 lift lift-lg" href="landing-lead-capture.html"><img class="img-fluid rounded-3" src="https://assets.startbootstrap.com/img/screenshots-product-pages/sb-ui-kit-pro/landing-lead-capture.png"/></a>
+      </div>
+      <div class="col-lg-4 mb-5">
+        <h6 class="mb-3">Demo 6 - Press</h6>
+        <a class="d-block rounded-3 lift lift-lg" href="landing-press.html"><img class="img-fluid rounded-3" src="https://assets.startbootstrap.com/img/screenshots-product-pages/sb-ui-kit-pro/landing-press.png"/></a>
+      </div>
+      <div class="col-lg-4 mb-5">
+        <h6 class="mb-3">Demo 7 - Directory</h6>
+        <a class="d-block rounded-3 lift lift-lg" href="landing-directory.html"><img class="img-fluid rounded-3" src="https://assets.startbootstrap.com/img/screenshots-product-pages/sb-ui-kit-pro/landing-directory.png"/></a>
+      </div>
+      <div class="col-lg-4 mb-5">
+        <h6 class="mb-3">Demo 8 - Rental</h6>
+        <a class="d-block rounded-3 lift lift-lg" href="landing-rental.html"><img class="img-fluid rounded-3" src="https://assets.startbootstrap.com/img/screenshots-product-pages/sb-ui-kit-pro/landing-rental.png"/></a>
+      </div>
+      <div class="col-lg-4 mb-5">
+        <h6 class="mb-3">Demo 9 - Real Estate</h6>
+        <a class="d-block rounded-3 lift lift-lg" href="landing-real-estate.html"><img class="img-fluid rounded-3" src="https://assets.startbootstrap.com/img/screenshots-product-pages/sb-ui-kit-pro/landing-real-estate.png"/></a>
+      </div>
+      <div class="col-lg-4 mb-5">
+        <h6 class="mb-3">Demo 10 - Classifieds</h6>
+        <a class="d-block rounded-3 lift lift-lg" href="landing-classifieds.html"><img class="img-fluid rounded-3" src="https://assets.startbootstrap.com/img/screenshots-product-pages/sb-ui-kit-pro/landing-classifieds.png"/></a>
+      </div>
+      <div class="col-lg-4 mb-5">
+        <h6 class="mb-3">Demo 11 - Resume</h6>
+        <a class="d-block rounded-3 lift lift-lg" href="landing-resume.html"><img class="img-fluid rounded-3" src="https://assets.startbootstrap.com/img/screenshots-product-pages/sb-ui-kit-pro/landing-resume.png"/></a>
+      </div>
+      <div class="col-lg-4 mb-5">
+        <h6 class="mb-3">Demo 12 - Portfolio</h6>
+        <a class="d-block rounded-3 lift lift-lg" href="landing-portfolio.html"><img class="img-fluid rounded-3" src="https://assets.startbootstrap.com/img/screenshots-product-pages/sb-ui-kit-pro/landing-portfolio.png"/></a>
+      </div>
+    </div>
+  </div>
+{% endblock %}
