--- a/app/views/errors/404.html.twig
+++ b/app/views/errors/404.html.twig
@@ -43,47 +43,27 @@
 
   {% block section %}
     <!-- Contenu spécifique de la page 404 -->
-    <div id="layoutError">
-        {# <div id="layoutError_content"> #}
-            <div class="container">
-                <div class="row justify-content-center">
-                <div class="col-lg-6">
-                    <div class="text-center mt-5">
-                    <img class="m-5 img-error" src="/../mon-blog/public/assets/error-404-Ralou.svg"/>
-                    <p class="lead">
-                        Oupss !! La page que vous souhaitez accéder n'existe pas
-                    </p>
-                    </div>
-                </div>
-                </div>
-            </div>
-        {# </div> #}
-    </div>
+    <section class="bg-white py-10">
+      <div class="container px-5">
+          <div class="row gx-5 justify-content-center">
+              <div class="col-lg-6">
+                  <div class="text-center mt-4">
+                      <img class="img-fluid p-4" src="/../mon-blog/public/assets/img/error-img/404-error.svg" alt="Erreur 404" />
+                      <p class="lead">Oupss !! La page que vous souhaitez accéder n'existe pas ou L'URL demandée n'a pas été trouvée sur ce serveur</p>
+                      <a class="text-arrow-icon" href="javascript:void(0);" onclick="history.back();">
+                          <i class="ms-0 me-1" data-feather="arrow-left"></i>
+                          Retour
+                      </a>
+                  </div>
+              </div>
+          </div>
+      </div>
+      <div class="svg-border-rounded text-dark">
+          <!-- Rounded SVG Border-->
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 144.54 17.34" preserveAspectRatio="none" fill="currentColor"><path d="M144.54,17.34H0V0H144.54ZM0,0S32.36,17.34,72.27,17.34,144.54,0,144.54,0"></path></svg>
+      </div>
+    </section>
   {% endblock %}
 {% endblock %}
 
-{# {% block header %}
-{% endblock %} #}
-
-{# {% block content %}
-    <!-- Contenu spécifique de la page 404 -->
-    <div id="layoutError">
-        <div id="layoutError_content">
-            <main>
-                <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="col-lg-6">
-                            <div class="text-center mt-4">
-                                <img class="mb-4 img-error" src="/mon-blog/public/assets/error-404-monochrome.svg" />
-                                <p class="lead">
-                                    Oupss !! La page que vous souhaitez accéder n'existe pas 
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </main>
-        </div>
-    </div>
-{% endblock %} #}
 
