--- a/public/css/uiStyles.css
+++ b/public/css/uiStyles.css
@@ -18227,6 +18227,11 @@ body {
   .animated--fade-in-up {
     animation: none;
   }
+  .navbar-marketing {
+    transition: background-color 0.15s ease-in-out;
+    padding-top: -0.5rem;
+    padding-bottom: 0.5rem;
+  }
 }
 .pagination-blog .page-item {
   margin-left: 0.25rem;
@@ -18475,6 +18480,7 @@ section {
   .svg-border-angled svg {
     height: 4.5rem;
   }
+  
 }
 @media (min-width: 1200px) {
   .svg-border-angled {
@@ -18726,11 +18732,15 @@ section {
 .footer.footer-light {
   color: #a7aeb8;
 }
-
 .page-header-ui {
   position: relative;
   padding-top: 8rem;
   padding-bottom: 8rem;
+}
+#home-header {
+  position: relative;
+  padding-top: 5rem;
+  padding-bottom: 0rem;
 }
 .page-header-ui .page-header-ui-content .page-header-ui-title {
   font-size: 2.5rem;
@@ -18782,6 +18792,7 @@ section {
   .page-header-video video video {
     display: none;
   }
+  
 }
 .pricing {
   font-size: 0.9rem;
